--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.8.8",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@chakra-ui/react": "^1.8.9",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@project-serum/borsh": "^0.2.5",
     "@solana/wallet-adapter-react-ui": "^0.9.6",
     "@solana/wallet-adapter-wallets": "^0.16.0",
-    "framer-motion": "^6.3.1",
+    "@solana/web3.js": "^1.62.1",
+    "framer-motion": "^6.5.1",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0"
